--- a/src/main/resources/templates/question_form.html
+++ b/src/main/resources/templates/question_form.html
@@ -3,12 +3,11 @@
 <html lang="en">
 <head th:replace="layout::head"></head>
 <body>
+<nav th:replace="layout::nav"></nav>
   <div class="container my-3">
     <h5 class="border-bottom pb-2">질문등록</h5>
     <form th:action="@{/question/create}" th:object="${questionForm}" method="post">
-      <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
-        <div th:each="err : ${#fields.allErrors()}" th:text="${err}" />
-      </div>
+      <div th:replace="layout::formErrors"></div>
       <div class="mb-3">
         <label for="subject" class="form-label">제목</label>
         <input type="text" th:field="*{subject}" class="form-control" />
