--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head th:replace="layout::head"></head>
 <body>
+<nav th:replace="layout::nav"></nav>
 <div class="container my-3">
     <table class="table">
         <thead class="table-dark">
@@ -13,16 +14,55 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="q, loop : ${qList}">
-            <td th:text="${loop.count}"></td>
+        <tr th:each="q, loop : ${paging}">
+            <td th:text="${paging.getTotalElements - (paging.number * paging.size) - loop.index}"></td>
             <td>
                 <a th:href="@{/question/detail/__${q.id}__}" th:text="${q.subject}"></a>
+                <span class="text-danger small ms-2"
+                      th:if="${#lists.size(q.answerList) > 0}"
+                      th:text="${#lists.size(q.answerList)}">
+              </span>
             </td>
             <td th:text="${#temporals.format(q.createDate, 'yyyy-MM-dd')}"></td>
         </tr>
         </tbody>
     </table>
+    <!-- 페이징처리 시작 -->
+    <div th:if="${!paging.isEmpty()}">
+        <ul class="pagination justify-content-center">
+            <!-- 제일 처음-->
+            <li class="page-item" th:classappend="${paging.first} ? 'disabled'">
+                <a class="page-link" th:href="@{|?page=0|}">
+                    <span>First</span>
+                </a>
+            </li>
+            <!-- 이전 페이지 -->
+            <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
+                <a class="page-link" th:href="@{|?page=${paging.number-1}|}">
+                    <span>&lt;</span>
+                </a>
+            </li>
 
+            <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
+                th:if="${page >= paging.number-2 and page <= paging.number+2}"
+                th:classappend="${page == paging.number} ? 'active'"
+                class="page-item">
+                <a th:text="${page+1}" class="page-link" th:href="@{|?page=${page}|}"></a>
+            </li>
+            <!-- 다음 페이지 -->
+            <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
+                <a class="page-link" th:href="@{|?page=${paging.number+1}|}">
+                    <span> &gt;</span>
+                </a>
+            </li>
+            <!-- 제일 마지막-->
+            <li class="page-item" th:classappend="${paging.last} ? 'disabled'">
+                <a class="page-link" th:href="@{|?page=${paging.totalPages-1}|}">
+                    <span>Last</span>
+                </a>
+            </li>
+        </ul>
+    </div>
     <a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
 </div>
 
