--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -11,9 +11,31 @@
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;" th:text="${q.content}"></div>
             <div class="d-flex justify-content-end">
+
+                <div class="badge bg-light btn-outline-danger text-dark p-2 text-start">
+                    <div class="mb-2">
+                        <span th:if="${q.author != null}" th:text="${q.author.username}"></span>
+                    </div>
+                    <div th:text="${#temporals.format(q.modifyDate, 'yyyy-MM-dd HH:mm')}"></div>
+                </div>
+
                 <div class="badge bg-light text-dark p-2 text-start">
+                    <div class="mb-2">
+                        <span th:if="${q.author != null}" th:text="${q.author.username}"></span>
+                    </div>
                     <div th:text="${#temporals.format(q.createDate, 'yyyy-MM-dd HH:mm')}"></div>
                 </div>
+            </div>
+
+            <div class="my-3">
+                <a th:href="@{|/question/modify/${q.id}|}" class="btn btn-sm btn-outline-secondary"
+                   sec:authorize="isAuthenticated()"
+                   th:if="${q.author != null and #authentication.getPrincipal().getUsername() == q.author.username}"
+                   th:text="수정"></a>
+                <a href="javascript:void(0);" th:data-uri="@{|/question/delete/${q.id}|}"
+                   class="delete btn btn-sm text-dark btn-outline-primary" sec:authorize="isAuthenticated()"
+                   th:if="${q.author != null and #authentication.getPrincipal().getUsername() == q.author.username}"
+                   th:text="삭제"></a>
             </div>
         </div>
     </div>
@@ -25,9 +47,33 @@
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;" th:text="${answer.content}"></div>
             <div class="d-flex justify-content-end">
+
                 <div class="badge bg-light text-dark p-2 text-start">
-                    <div th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd')}"></div>
+                    <div class="mb-2">
+                        <span th:if="${answer.author != null}" th:text="${answer.author.username}"></span>
+                    </div>
+                    <div th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></div>
                 </div>
+
+                <div class="badge bg-light text-dark p-2 text-start">
+                    <div class="mb-2">
+                        <span th:if="${answer.author != null}" th:text="${answer.author.username}"></span>
+                    </div>
+                    <div th:text="${#temporals.format(answer.modifyDate, 'yyyy-MM-dd HH:mm')}"></div>
+                </div>
+
+
+
+            </div>
+            <div class="my-3">
+                <a th:href="@{|/answer/modify/${answer.id}|}" class="btn btn-sm btn-outline-secondary"
+                   sec:authorize="isAuthenticated()"
+                   th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"
+                   th:text="수정"></a>
+                <a href="javascript:void(0);" th:data-uri="@{|/answer/delete/${answer.id}|}"
+                   class="delete btn btn-sm text-dark btn-outline-primary" sec:authorize="isAuthenticated()"
+                   th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"
+                   th:text="삭제"></a>
             </div>
         </div>
     </div>
@@ -35,9 +81,20 @@
     <!-- 답변 작성 -->
     <form th:action="@{/answer/create/__${q.id}__}" th:object="${answerForm}" method="post" class="my-3">
         <div th:replace="layout::formErrors"></div>
-        <textarea th:field="*{content}" rows="10" class="form-control"></textarea>
+        <textarea sec:authorize="isAnonymous()" disabled th:field="*{content}" rows="10" class="form-control" style="resize: none !important;"></textarea>
+        <textarea sec:authorize="isAuthenticated()" th:field="*{content}" rows="10" class="form-control" style="resize: none !important;"></textarea>
         <input type="submit" value="답변등록" class="btn btn-primary my-2">
     </form>
 </div>
+    <script>
+        const delete_elements = document.getElementsByClassName('delete');
+        Array.from(delete_elements).forEach(function (element) {
+            element.addEventListener('click', function () {
+                if (confirm('정말로 삭제하시겠습니까?')) {
+                    location.href = this.dataset.uri;
+                }
+            });
+        });
+    </script>
 </body>
 </html>
