--- a/src/main/resources/templates/question_form.html
+++ b/src/main/resources/templates/question_form.html
@@ -6,7 +6,8 @@
 <nav th:replace="layout::nav"></nav>
   <div class="container my-3">
     <h5 class="border-bottom pb-2">질문등록</h5>
-    <form th:action="@{/question/create}" th:object="${questionForm}" method="post">
+    <form th:object="${questionForm}" method="post">
+      <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
       <div th:replace="layout::formErrors"></div>
       <div class="mb-3">
         <label for="subject" class="form-label">제목</label>
