--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -7,23 +7,26 @@
 <div class="container my-3">
     <table class="table">
         <thead class="table-dark">
-        <tr>
+        <tr class="text-center">
             <th>번호</th>
-            <th>제목</th>
+            <th style="width: 50%">제목</th>
+            <th>글쓴이</th>
             <th>작성일시</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="q, loop : ${paging}">
+        <tr class="text-center" th:each="question, loop : ${paging}">
             <td th:text="${paging.getTotalElements - (paging.number * paging.size) - loop.index}"></td>
-            <td>
-                <a th:href="@{/question/detail/__${q.id}__}" th:text="${q.subject}"></a>
-                <span class="text-danger small ms-2"
-                      th:if="${#lists.size(q.answerList) > 0}"
-                      th:text="${#lists.size(q.answerList)}">
-              </span>
+            <td class="text-start">
+                <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
+                <span class="text-danger small ms-2" th:if="${#lists.size(question.answerList) > 0}"
+                      th:text="${#lists.size(question.answerList)}">
+                </span>
             </td>
-            <td th:text="${#temporals.format(q.createDate, 'yyyy-MM-dd')}"></td>
+            <td>
+                <span th:if="${question.author != null}" th:text="${question.author.username}"></span>
+            </td>
+            <td th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></td>
         </tr>
         </tbody>
     </table>
