--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -12,22 +12,26 @@
             <div class="card-text" style="white-space: pre-line;" th:text="${q.content}"></div>
             <div class="d-flex justify-content-end">
 
-                <div class="badge bg-light btn-outline-danger text-dark p-2 text-start">
-                    <div class="mb-2">
-                        <span th:if="${q.author != null}" th:text="${q.author.username}"></span>
-                    </div>
-                    <div th:text="${#temporals.format(q.modifyDate, 'yyyy-MM-dd HH:mm')}"></div>
-                </div>
-
                 <div class="badge bg-light text-dark p-2 text-start">
                     <div class="mb-2">
                         <span th:if="${q.author != null}" th:text="${q.author.username}"></span>
                     </div>
                     <div th:text="${#temporals.format(q.createDate, 'yyyy-MM-dd HH:mm')}"></div>
                 </div>
+
+                <div class="badge bg-light btn-outline-danger text-dark p-2 text-start">
+                    <div class="mb-2">수정시간</div>
+                    <div th:text="${#temporals.format(q.modifyDate, 'yyyy-MM-dd HH:mm')}"></div>
+                </div>
+
             </div>
 
             <div class="my-3">
+                <a href="javascript:void(0);" class="recommend btn btn-sm btn-outline-secondary"
+                   th:data-uri="@{|/question/vote/${q.id}|}">
+                    추천
+                    <span class="badge rounded-pill bg-success" th:text="${#lists.size(q.voter)}"></span>
+                </a>
                 <a th:href="@{|/question/modify/${q.id}|}" class="btn btn-sm btn-outline-secondary"
                    sec:authorize="isAuthenticated()"
                    th:if="${q.author != null and #authentication.getPrincipal().getUsername() == q.author.username}"
@@ -56,9 +60,7 @@
                 </div>
 
                 <div class="badge bg-light text-dark p-2 text-start">
-                    <div class="mb-2">
-                        <span th:if="${answer.author != null}" th:text="${answer.author.username}"></span>
-                    </div>
+                    <div class="mb-2">수정시간</div>
                     <div th:text="${#temporals.format(answer.modifyDate, 'yyyy-MM-dd HH:mm')}"></div>
                 </div>
 
@@ -66,6 +68,11 @@
 
             </div>
             <div class="my-3">
+                <a href="javascript:void(0);" class="recommend btn btn-sm btn-outline-secondary"
+                   th:data-uri="@{|/answer/vote/${answer.id}|}">
+                    추천
+                    <span class="badge rounded-pill bg-success" th:text="${#lists.size(answer.voter)}"></span>
+                </a>
                 <a th:href="@{|/answer/modify/${answer.id}|}" class="btn btn-sm btn-outline-secondary"
                    sec:authorize="isAuthenticated()"
                    th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"
@@ -93,6 +100,15 @@
                 if (confirm('정말로 삭제하시겠습니까?')) {
                     location.href = this.dataset.uri;
                 }
+            });
+        });
+
+        const recommend_elements = document.getElementsByClassName("recommend");
+        Array.from(recommend_elements).forEach(function(element) {
+            element.addEventListener('click', function() {
+                if(confirm("정말로 추천하시겠습니까?")) {
+                    location.href = this.dataset.uri;
+                };
             });
         });
     </script>
